application-lifecycle-management/nginx-app-kustomize/resources/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
